--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ button:hover {
     border-radius: 5px;
     margin: 5px 0;
     cursor: pointer;
+    border-left: 8px solid #aaa;
 }
 .subject.pendiente { background-color: #b71c1c; }
 .subject.cursando { background-color: #f9a825; }
